db/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: lingoda-demo
    role: db-deploy
    stage: dev
    version: 7.0.1
  annotations:
    author: "ciprian.bucur"
spec:
  selector:
    matchLabels:
      app: lingoda-demo
      role: db-pod
      stage: dev
      version: 7.0.1
  replicas: 1
  template:
    metadata:
      labels:
        app: lingoda-demo
        role: db-pod
        stage: dev
        version: 7.0.1
      annotations:
        author: "ciprian.bucur"
    spec:
      nodeSelector:
        role: workers
      containers:
      - name: db
        image: mysql:8.0.25
        ports:
        - name: db
          containerPort: 3306
          protocol: TCP
        resources:
          requests:
            memory: 1600Mi
          limits:
            memory: 2Gi       
        volumeMounts:
        - name: db
          mountPath: "/var/lib/mysql"
        - name: mysql-config
          mountPath: "/etc/mysql/conf.d/my.cnf"
          subPath: my.cnf
      volumes:
      - name: mysql-config
        configMap:
          name: mysql-config
      - name: db
        persistentVolumeClaim:
          claimName: db
